--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,14 +1,24 @@
 {
     "extensions": [
-        "eg2.vscode-npm-script",
-        "angular.ng-template",
-        "dbaeumer.vscode-eslint",
-        "stylelint.vscode-stylelint"
-    ],
+		"eg2.vscode-npm-script",
+		"angular.ng-template",
+		"dbaeumer.vscode-eslint",
+		"stylelint.vscode-stylelint"
+	],
     "settings": {
-        "eslint.workingDirectories": [
-            { "mode": "auto" }
-        ]
-    },
-    "postCreateCommand": "export NG_CLI_ANALYTICS=ci && npm i -g @angular/cli && npm install"
+		"terminal.integrated.shell.linux": "/bin/bash",
+		"eslint.workingDirectories": [
+			{
+				"mode": "auto"
+			}
+		]
+	},
+	"postCreateCommand": "export NG_CLI_ANALYTICS=ci && npm i -g @angular/cli && npm install",
+	"build": {
+		"dockerfile": ".devcontainer\\Dockerfile",
+		"args": {
+			"VARIANT": "12"
+		}
+	},
+	"remoteUser": "node"
 }
